[package]
name = "todo"
version = "0.1.0"
authors = ["Nvt5"]
license = "MIT"
description = "Simple todo list cli."
readme = "README.md"
homepage = "https://github.com/Nvt500/todo"
repository = "https://github.com/Nvt500/todo"
keywords = ["todo", "cli", "simple"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }